fixed mobile spacing for portfolio ul bar

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -27,6 +27,7 @@
 
 
     @include mobile {
+      width: 300vw;
       margin: 0px 0;
       height: 40px;
       flex-wrap: wrap;
