--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -14,6 +14,7 @@
 
 
   h1 {
+    margin-top: 30px;
     font-size: 50px;
     height: 60px;
 
